--- a/Test2024.ioc
+++ b/Test2024.ioc
@@ -39,8 +39,28 @@ Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
 Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.I2C2_RX.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.I2C2_RX.1.Instance=DMA1_Channel5
+Dma.I2C2_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.I2C2_RX.1.MemInc=DMA_MINC_ENABLE
+Dma.I2C2_RX.1.Mode=DMA_NORMAL
+Dma.I2C2_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.I2C2_RX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.I2C2_RX.1.Priority=DMA_PRIORITY_LOW
+Dma.I2C2_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.I2C2_TX.2.Direction=DMA_MEMORY_TO_PERIPH
+Dma.I2C2_TX.2.Instance=DMA1_Channel4
+Dma.I2C2_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.I2C2_TX.2.MemInc=DMA_MINC_ENABLE
+Dma.I2C2_TX.2.Mode=DMA_NORMAL
+Dma.I2C2_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.I2C2_TX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.I2C2_TX.2.Priority=DMA_PRIORITY_LOW
+Dma.I2C2_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 Dma.Request0=ADC1
-Dma.RequestsNb=1
+Dma.Request1=I2C2_RX
+Dma.Request2=I2C2_TX
+Dma.RequestsNb=3
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C2.I2C_Mode=I2C_Fast
@@ -101,6 +121,8 @@ MxCube.Version=6.14.1
 MxDb.Version=DB.6.0.141
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel4_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -148,8 +170,9 @@ PA8.Signal=GPIO_Output
 PA9.Locked=true
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
-PB0.GPIOParameters=GPIO_Label
+PB0.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB0.GPIO_Label=SW0
+PB0.GPIO_PuPd=GPIO_PULLUP
 PB0.Locked=true
 PB0.Signal=GPIO_Input
 PB10.Locked=true
