Optimizaciones MPU y Motores

--- a/Test2024.ioc
+++ b/Test2024.ioc
@@ -292,6 +292,8 @@ TIM4.Period=9999
 TIM4.Prescaler=71
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
+USB.IPParameters=low_power_enable
+USB.low_power_enable=DISABLE
 USB_DEVICE.APP_RX_DATA_SIZE=256
 USB_DEVICE.APP_TX_DATA_SIZE=256
 USB_DEVICE.CLASS_NAME_FS=CDC
